<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fridgecontents.FridgeContentsActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="600dp"
        android:layout_height="217dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:text="@string/fridgeContentsButton"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="345dp"
        android:layout_height="330dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/messagesButtonColor"
        android:fontFamily="sans-serif-medium"
        android:onClick="displayAddFoodToFridge"
        android:text="@string/add_food"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="345dp"
        android:layout_height="330dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/fridgeContentsButtonColor"
        android:onClick="seeFoodInside"
        android:text="@string/curr_food_inside"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:drawableLeft="@drawable/whiteplus"
        android:text="@string/quick_food_add"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>